--- a/src/main/java/uiDecoreted/Tenant/RentalListPanel.form
+++ b/src/main/java/uiDecoreted/Tenant/RentalListPanel.form
@@ -37,7 +37,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="420" y="640" width="200" height="50"/>
+          <AbsoluteConstraints x="410" y="640" width="200" height="50"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -71,7 +71,8 @@
               <Font name="Segoe UI Symbol" size="14" style="0"/>
             </Property>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="5" rowCount="4">
+              <Table columnCount="6" rowCount="4">
+                <Column editable="false" title="HouseId" type="java.lang.Integer"/>
                 <Column editable="false" title="Image" type="java.lang.Object"/>
                 <Column editable="false" title="Desc" type="java.lang.Object"/>
                 <Column editable="false" title="Address" type="java.lang.Object"/>
