--- a/src/main/java/uiDecoreted/Manager/ViewMoveOrderPanel.form
+++ b/src/main/java/uiDecoreted/Manager/ViewMoveOrderPanel.form
@@ -39,8 +39,8 @@
               <Table columnCount="6" rowCount="4">
                 <Column editable="true" title="Order ID" type="java.lang.Object"/>
                 <Column editable="true" title="Customer" type="java.lang.Object"/>
-                <Column editable="true" title="Type" type="java.lang.Object"/>
                 <Column editable="true" title="Date" type="java.lang.Object"/>
+                <Column editable="true" title="Company" type="java.lang.Object"/>
                 <Column editable="true" title="Status" type="java.lang.Object"/>
                 <Column editable="true" title="Comment" type="java.lang.Object"/>
               </Table>
@@ -111,10 +111,30 @@
         <Component class="javax.swing.JTable" name="jTable2">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="2" rowCount="4">
+              <Table columnCount="3" rowCount="4">
+                <Column editable="true" title="ID" type="java.lang.Object"/>
                 <Column editable="true" title="Company" type="java.lang.Object"/>
                 <Column editable="true" title="Staffs Number" type="java.lang.Object"/>
               </Table>
+            </Property>
+            <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
+              <TableColumnModel selectionModel="0">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+              </TableColumnModel>
             </Property>
             <Property name="gridColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="80" green="80" red="80" type="rgb"/>
