--- a/src/main/java/uiDecoreted/Manager/ManagerPanel.form
+++ b/src/main/java/uiDecoreted/Manager/ManagerPanel.form
@@ -140,7 +140,7 @@
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="javax.swing.JLabel" name="nameLabel1">
+    <Component class="javax.swing.JLabel" name="emailLabel">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
